# backend/openapi.yaml
@@ -188,6 +188,25 @@ paths:
         403:
           $ref: '#/components/responses/Forbidden'
 
+  /users/{handle}/following:
+    get:
+      tags:
+        - me
+        - following
+      parameters:
+        - $ref: '#/components/parameters/handleParam'
+        - $ref: '#/components/parameters/pageParam'
+        - $ref: '#/components/parameters/limitParam'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Users'
+        404:
+          $ref: '#/components/responses/NotFound'
+
 
 components:
   securitySchemes:
